# Highflying-Themes

./: .gitignore  README.md  jsrepo.json  package-lock.json  package.json  tsconfig.json
backend/: README.md  env.example  index.py  pyproject.toml  requirements.txt  vercel.json
backend/auth/: routes.py  utils.py
backend/contact/: __init__.py  routes.py
backend/database/: __init__.py  auth.py  connection.py  contact.py  theme.py
backend/models/: __init__.py  auth.py  contact.py  theme.py
backend/routes/: __init__.py
backend/routes/auth/: __init__.py  utils.py
backend/routes/contact/: __init__.py
backend/routes/health_check/: __init__.py
backend/routes/theme/: __init__.py
backend/utils/: smdh_generator.py
src/app/: layout.tsx  manifest.json  not-found.tsx  page.tsx
src/app/about-us/: page.tsx
src/app/contact-us/: metadata.ts  page.tsx
src/app/faq/: page.tsx
src/app/login-signup/: metadata.ts  page.tsx
src/app/privacy-policy/: page.tsx
src/app/profile/: metadata.ts  page.tsx
src/app/profile/[user]/: page.tsx
src/app/terms-of-service/: page.tsx
src/app/themes/: metadata.ts  page.tsx
src/app/themes/[id]/: ThemePageClient.tsx  page.tsx
src/app/themes/download/[theme_id]/: route.ts
src/app/upload-theme/: metadata.ts  page.tsx
src/components/: ProtectedRoute.tsx  QRCode.tsx  SearchAndFilters.tsx  ThemeActions.tsx  ThemeCardGroup.tsx  footer.tsx  header.tsx  themeCard.tsx
src/components/blocks/: ImageTrail.tsx  SplashCursor.jsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts
